--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 
 
-<header class="bg-[url('..\assets\images\bg3.jpg')] w-screen h-full overflow-hidden bg-cover bg-no-repeat flex justify-center pt-[100px] sm:pt-[150px] pb-[10%]" id="header">
+<header class="bg-[url('assets\images\bg3.jpg')] w-screen h-full overflow-hidden bg-cover bg-no-repeat flex justify-center pt-[100px] sm:pt-[150px] pb-[10%]" id="header">
 
     <div class="landing-main text-white flex flex-col pl-[10px] pr-[10px] pt-[30px] ml-[10%] mr-[10%] shadow-[0px_0px_30px_20px_rgba(255,255,255,0.2)] w-screen h-fit backdrop-blur-md bg-[rgba(255,255,255,0.05)] pb-[5%] rounded-xl sm:pr-[5%] sm:pl-[5%] sm:w-[80%] lg:w-[70%] xl:w-[60%] 2xl:w-1/2">
         <span class="text-[20px] sm:text-[30px] lg:text-[40px] 2xl:text-[50px] font-bold mb-[5px]">Hi, I Am Keshav Rajput</span>
@@ -76,7 +76,7 @@
     <div class="about-main w-full h-fit flex flex-col items-center pl-[10px] pr-[10px] lg:flex-row lg:items-start">
 
         <div class="inner-left w-1/2 h-fit mt-3 sm:w-1/3 lg:w-1/3 xl:w-1/4">
-            <div class="img-container object-cover sm:rounded-lg overflow-hidden shadow-[0px_0px_10px_1px_#000000]"><img src="/assets/model-Io5zEXoZ.jpg"></div>
+            <div class="img-container object-cover sm:rounded-lg overflow-hidden shadow-[0px_0px_10px_1px_#000000]"><img src="assets/model-Io5zEXoZ.jpg"></div>
         </div>
         <div class="inner-right w-full h-fit">
 
@@ -210,7 +210,7 @@
 
             <div class="card1 w-full sm:w-1/4 shadow-[0px_0px_10px_5px_#aaaaaa] overflow-hidden rounded-b-[10px] mb-5 rounded-t-[10px]">
                 <div class="card-img rounded-bl-[20px] rounded-br-[20px] overflow-hidden object-cover">
-                    <img src="/assets/bg1-TzLjHyXg.jpg">
+                    <img src="assets/bg1-TzLjHyXg.jpg">
                 </div>
                 <div class="card-contant">
                     <span class="font-semibold text-xl">Project 1</span>
@@ -219,7 +219,7 @@
         </div>
             <div class="card1 w-full sm:w-1/4 shadow-[0px_0px_10px_5px_#aaaaaa] overflow-hidden rounded-b-[10px] rounded-t-[10px] mb-5">
                 <div class="card-img rounded-bl-[20px] rounded-br-[20px] overflow-hidden object-cover">
-                    <img src="/assets/bg2-hUdaQkBh.jpg">
+                    <img src="assets/bg2-hUdaQkBh.jpg">
                 </div>
                 <div class="card-contant">
                     <span class="font-semibold text-xl">Project 1</span>
@@ -228,7 +228,7 @@
         </div>
             <div class="card1 w-full sm:w-1/4 shadow-[0px_0px_10px_5px_#aaaaaa] overflow-hidden rounded-b-[10px] rounded-t-[10px] mb-5">
                 <div class="card-img rounded-bl-[20px] rounded-br-[20px] overflow-hidden object-cover">
-                    <img src="/assets/bg4-Y-vvizcQ.jpg">
+                    <img src="assets/bg4-Y-vvizcQ.jpg">
                 </div>
                 <div class="card-contant">
                     <span class="font-semibold text-xl">Project 1</span>
