--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 
 
-<header class="bg-[url('/assets/bg3-4_GdHd4J.jpg')] w-screen h-full overflow-hidden bg-cover bg-no-repeat flex justify-center pt-[100px] sm:pt-[150px] pb-[10%]" id="header">
+<header class="bg-[url('assets/bg3-4_GdHd4J.jpg')] w-screen h-full overflow-hidden bg-cover bg-no-repeat flex justify-center pt-[100px] sm:pt-[150px] pb-[10%]" id="header">
 
     <div class="landing-main text-white flex flex-col pl-[10px] pr-[10px] pt-[30px] ml-[10%] mr-[10%] shadow-[0px_0px_30px_20px_rgba(255,255,255,0.2)] w-screen h-fit backdrop-blur-md bg-[rgba(255,255,255,0.05)] pb-[5%] rounded-xl sm:pr-[5%] sm:pl-[5%] sm:w-[80%] lg:w-[70%] xl:w-[60%] 2xl:w-1/2">
         <span class="text-[20px] sm:text-[30px] lg:text-[40px] 2xl:text-[50px] font-bold mb-[5px]">Hi, I Am Keshav Rajput</span>
@@ -274,6 +274,6 @@
     
 
 
-    <script src="javascript/script.js"></script>
+    <script src="assets/script.js"></script>
 </body>
 </html>
